# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ixai"
version = "0.1.0"
description = "Explainable Artificial Intelligence for incremental models."
authors = [
    { name = "Maximilian Muschalik", email = "Maximilian.Muschalik@ifi.lmu.de" },
    { name = "Fabian Fumagalli", email = "ffumagalli@techfak.uni-bielefeld.de" },
    { name = "Rohit Jagtani" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9"
]
keywords = ["python", "machine learning", "online learning", "xai"]
dependencies = [
    "river",
    "matplotlib",
    "pandas",
    "numpy",
    "tqdm"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["sklearn", "torch", "bumpver", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/mmschlk/iXAI"